update tutorial page, column length formatting

--- a/academicCV.html
+++ b/academicCV.html
@@ -20,7 +20,9 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"><a href="research.html">Research Projects</a></p>        
         <p class="view"> Academic CV</p>
+        <p class="view"> <a href="tutorial.html">Tutorial</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
+
         <br>
 
         <p class="view">
@@ -121,7 +123,9 @@ Undergraduate Travel Award
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages<br>
+        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+        </small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
