--- a/resources.html
+++ b/resources.html
@@ -20,6 +20,7 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view"> <a href="tutorial.html">Tutorial</a></p>
         <p class="view">Resources</p>
         <br>
         
@@ -134,7 +135,9 @@ Blogs:
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages<br>
+        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+        </small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
