--- a/tutorial.html
+++ b/tutorial.html
@@ -20,8 +20,8 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view">Tutorial</p>
         <p class="view"> <a href="resources.html">Resources</a></p>
-        <p class="view">Tutorial (under construction)</p>
         <br>
         
         <p class="view">
@@ -41,25 +41,41 @@
 
       </header>
       <section>
-<h3><p>This page is under construction... </p>
+<h3><p>This page is UNDER CONSTRUCTION... </p>
 <br>
 
-<h3><p> <strong>1. <a href = "https://github.com/QihongL/neuralNet_tutorial_tensorflow">Intro to neural network modeling with Tensorflow<a/></strong></a></p> </h3>
+<h3><p> <strong>1. <a href = "https://github.com/QihongL/MVPA_tutorial">Intro to MVPA methods for neuroimaging data</a></strong> 
+</p></h3>
 <p>
-I am working on writing some tutorial code for <a href = "http://concepts.psych.wisc.edu/index.php/classes/psychology-711/">Psych 711 Introduction to Parallel Distributed Processing </a>, taught by Professor Tim Rogers at UW-Madison. This course provides a high level introduction to neural network modeling in the context of cognitive psychology research. I am quite busy right now so I don't feel it can be finished soon... 
+I am organizing the brain imaging unit at the <a href = "http://concepts.psych.wisc.edu/" > Knowledge and Concepts Lab</a>, directed by Professor Tim Rogers. Here's a tutorial (in progress) that introduces people to MVPA methods, in the setting of analyzing neuroimaging data. I plan to focus on sparse methods, such as logistic LASSO, in particular. 
 </p>
 <br>
 
-<h3><p> <strong>2. <a href = "myDocs/ECE532_reweighted_lasso_and_application_neuroimaging.pdf">Approximate L0 solution with iterative L1 reweighting </a> </strong></p> </h3>
+
+
+<h3><p> <strong>2. <a href = "myDocs/ECE532_reweighted_lasso_and_application_neuroimaging.pdf">Approximate L0 solution with iterative L1 reweighting </a></strong></p> </h3>
 <p>
-This is a tutorial I wrote when I was taking <a href = "http://nowak.ece.wisc.edu/ece532/"> ECE 532 Theory and Applications of Pattern Recognition</a>, taught by Professor Robert Nowak and Laurent Lessard at UW-Madison. I will rewrite it with some updates in the future. 
+This is a tutorial I wrote when I was taking <a href = "http://www.laurentlessard.com/teaching/532-pattern-recognition/"> ECE 532 Theory and Applications of Pattern Recognition</a>, taught by Professor <a href = "http://nowak.ece.wisc.edu/"> Robert Nowak </a> and Professor <a href = "http://www.laurentlessard.com/"> Laurent Lessard </a> at UW-Madison. I will re-write and upate this document in the future. You are welcome to read it if you don't mind the typos... 
 </p>
 <br>
+
+
+
+<!-- <h3><p> <strong>2. <a href = "https://github.com/QihongL/neuralNet_tutorial_tensorflow">Intro to neural network modeling with Tensorflow</strong></a></p> </h3> -->
+<h3><p> <strong>3. Intro to neural network modeling with Tensorflow</strong></p> </h3>
+<p>
+I am working on a tutorial for <a href = "http://concepts.psych.wisc.edu/index.php/classes/psychology-711/">Psych 711 Introduction to Parallel Distributed Processing </a>, a graduate course taught by Professor Tim Rogers at UW-Madison. This course provides a high level introduction to neural network modeling in the context of cognitive psychology research. 
+</p>
+<br>
+
+
 
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages<br>
+        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+        </small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
