--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <p class="view"> Home </p>        
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view"> <a href="tutorial.html">Tutorial</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
+
         <br>
         
         <p class="view">
@@ -61,9 +63,10 @@
 
 
 <p style="width: 400px;">
-<img src="/myImages/myPics/engAward.jpg">
+<center><img src="/myImages/myPics/engAward.jpg"></center>
 <p class="view">  </p>
 </p>   
+
 
 
 <p>
@@ -86,7 +89,9 @@ Outside the lab, I enjoy watching Japanese anime, tasting desserts and learning 
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages<br>
+        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+        </small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
