--- a/research.html
+++ b/research.html
@@ -20,6 +20,7 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view">Research Projects</p>        
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view"> <a href="tutorial.html">Tutorial</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <br>
         
@@ -42,11 +43,10 @@
       <section>
         <h3>
 
-
-<h3><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
+<h3 id="top"><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
 
 <p style="width: 500px;">
-<img src="/myImages/research/pdp_cat_demo.png">
+<center><img src="/myImages/research/pdp_cat_demo.png"></center>
 </p> 
 <p> This is a computational model for the temporal dynamics of human object recognition. Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other behavioral and neural data.  <br>
 - [
@@ -75,7 +75,7 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 <h3><p> <strong>2. A reinforcement learning network for "counting"</strong></p></h3>
 
 <p style="width: 450px;">
-<img src="/myImages/research/countModel_envir.png">
+<center><img src="/myImages/research/countModel_envir.png"></center>
 </p> 
 
 <p>Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps an artificial agent to learn a counting-related task. This modeling framework is inspired by the Deep-Q network (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>). 
@@ -110,7 +110,8 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 </p>
 
 <p style="width: 450px;">
-<img src="/myImages/research/ilassoResults.png">
+<center><img src="/myImages/research/ilassoResults.png"></center>
+</p>
 
 <p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional methods (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we were able to find distributed neural representation of faces that is idiosyncratic across subjects. 
 
@@ -138,9 +139,16 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 </p>
 
 
+<br><br><br>
+
+<center><a href="#top">Go to top</a></center>
+
+
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages<br>
+        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+        </small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
