--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal webpage!</h3>
 
-
+<center>
 <p style="width: 400px;">
-<center><img src="/myImages/myPics/engAward.jpg"></center>
-<p class="view">  </p>
+<img src="/myImages/myPics/engAward.jpg">
+<!-- <p class="view">  </p> -->
 </p>   
-
+</center>
 
 
 <p>
