--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal webpage!</h3>
 
 <center>
-<p style="width: 400px;">
-<img src="/myImages/myPics/engAward.jpg">
+<p>
+<!-- <p style="width: 400px;"> -->
+<img src="/myImages/myPics/engAward.jpg" height="320" width="415">
 <!-- <p class="view">  </p> -->
-</p>   
+</p>
+<!-- </p>    -->
 </center>
 
 
