--- a/research.html
+++ b/research.html
@@ -44,10 +44,9 @@
         <h3>
 
 <h3 id="top"><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
-
+<center>
 <p style="width: 500px;">
-<center><img src="/myImages/research/pdp_cat_demo.png"></center>
-</p> 
+<img src="/myImages/research/pdp_cat_demo.png"></p></center>
 <p> This is a computational model for the temporal dynamics of human object recognition. Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other behavioral and neural data.  <br>
 - [
 <a href = "myDocs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>, 
