update img size

--- a/research.html
+++ b/research.html
@@ -73,9 +73,9 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 
 <h3><p> <strong>2. A reinforcement learning network for "counting"</strong></p></h3>
 
+<center>
 <p style="width: 450px;">
-<center><img src="/myImages/research/countModel_envir.png"></center>
-</p> 
+<img src="/myImages/research/countModel_envir.png"></p></center>
 
 <p>Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps an artificial agent to learn a counting-related task. This modeling framework is inspired by the Deep-Q network (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>). 
 
@@ -105,12 +105,11 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 
 <h3><p> <strong>3. Discover distributed representation via fMRI decoding</strong></p></h3>
 </i>
-
 </p>
 
+<center>
 <p style="width: 450px;">
-<center><img src="/myImages/research/ilassoResults.png"></center>
-</p>
+<img src="/myImages/research/ilassoResults.png"></p></center>
 
 <p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional methods (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we were able to find distributed neural representation of faces that is idiosyncratic across subjects. 
 
