--- a/academicCV.html
+++ b/academicCV.html
@@ -35,7 +35,7 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"><a href="research.html">Research Projects</a></p>        
         <p class="view"> Academic CV</p>
-        <p class="view"> <a href="tutorial.html">Tutorial</a></p>
+        <p class="view"> <a href="tutorial.html">Tutorials</a></p>
         <p class="view"> <a href="resources.html">Resources</a></p>
 
         <br>
