--- a/resources.html
+++ b/resources.html
@@ -32,7 +32,7 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
-        <p class="view"> <a href="tutorial.html">Tutorial</a></p>
+        <p class="view"> <a href="tutorial.html">Tutorials</a></p>
         <p class="view">Resources</p>
         <br>
         
