--- a/tutorial.html
+++ b/tutorial.html
@@ -32,7 +32,7 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
-        <p class="view">Tutorial</p>
+        <p class="view">Tutorials</p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <br>
         
