--- a/tutorial.html
+++ b/tutorial.html
@@ -59,7 +59,7 @@
 <h3><p> <strong>1. <a href = "https://github.com/QihongL/MVPA_tutorial">Intro to MVPA methods for neuroimaging data</a></strong> 
 </p></h3>
 <p>
-I am organizing the brain imaging unit at the <a href = "http://concepts.psych.wisc.edu/" > Knowledge and Concepts Lab</a>, directed by Professor Tim Rogers. Here's a tutorial (in progress) that introduces people to MVPA methods. To tackle the issue with underdetermined systems, I will focus on sparse methods, such as logistic LASSO, in particular. 
+I am organizing the brain imaging unit at the <a href = "http://concepts.psych.wisc.edu/" > Knowledge and Concepts Lab</a>, directed by Professor Tim Rogers. This is a tutorial (in progress) that introduces people to MVPA methods. To tackle the <a href = "https://en.wikipedia.org/wiki/Underdetermined_system">underdeterminacy</a> of neuroimaging data without pre-defining ROIs, I will focus on sparse methods, such as Logistic LASSO. 
 </p>
 <br>
 
