--- a/resources.html
+++ b/resources.html
@@ -135,11 +135,14 @@ Blogs:
 
 
 <h3><p> <strong>Frameworks </strong></p> </h3>
-<a href="https://www.tensorflow.org/">Tensorflow </a>: a reverse mode auto-differentiation library in Python
+<a href="https://www.tensorflow.org/">Tensorflow</a>: a reverse mode auto-differentiation library in Python
 <br>
-- <a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground </a>: Play with a feed-forward network! 
+- <a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground</a>: Play with a feed-forward network! 
 <br>
-<a href="https://gym.openai.com/">OpenAI Gym </a>: simulated environment for training RL agents
+<a href="https://gym.openai.com/">OpenAI Gym</a>: simulated environment for training RL agents
+<br>
+<a href = "http://web.stanford.edu/group/mbc/LENSManual/">LENS</a>: the light, efficient network simulator.
+
 <br>
 
 
