--- a/resources.html
+++ b/resources.html
@@ -97,6 +97,8 @@ Here're some resources for deep learning and reinforcement learning, primarily.
 <a href="https://web.stanford.edu/group/pdplab/pdphandbook/">The PDP handbook</a>, Jay McClelland
 <br>
 
+<a href = "http://neuralnetworksanddeeplearning.com/">Neural Networks and Deep Learning</a>, Michael Nielsen
+
 
 <br><br>
 
@@ -105,7 +107,7 @@ Here're some resources for deep learning and reinforcement learning, primarily.
 <h3><p> <strong>Other resources </strong></p> </h3>
 
 
-<a href="http://deeplearning4j.org/deeplearningforbeginners.html">Deep Learning for Beginners</a> 
+<a href="https://github.com/songrotek/Deep-Learning-Papers-Reading-Roadmap">Deep learning reading roadmap</a> 
 <br>
 
 <a href="http://deeplearning.net/reading-list/">Deep learning reading list</a> 
