--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@ Outside the lab, I enjoy watching Japanese anime, tasting desserts and learning 
 </p>
 
 <p>
-<b>Recent update</b>:
+<b>News</b>:
+<br>
+10/26/2016 - I am organizing a <a href ="https://github.com/QihongL/MVPA_tutorial/wiki">workshop</a> about sparse MVPA methods for neuroimaging data. Let me know if you would like to join us. 
 <br>
 8/31/2016 -  I plan to apply for interdisciplinary Ph.D. programs in psychology and neuroscience this fall.
 </p>
