--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Hi, I'm Qihong, or just "Q", an undergrad studying psychology and math at the
 Combining behavioral experiments, neuroimaging, and computational modeling, I have been studying semantic knowledge representation and mathematical cognition, advised by Professor 
 <a href = "http://psych.wisc.edu/Rogers/">Tim Rogers</a>,
 <a href = "http://lcnl.wisc.edu/index.php/people/maryellen-c-macdonald/"> Maryellen MacDonald</a>, 
-<a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  
+<a href = "http://stanford.edu/~jlmcc/"> Jay McClelland </a>  
 and others. Their dedicated guidance had a significant influence on me. I deeply appreciate their support. 
 
 Outside the lab, I enjoy watching Japanese anime, tasting desserts and learning violin.
