--- a/academicCV.html
+++ b/academicCV.html
@@ -103,7 +103,7 @@ PI: Jay McClelland, Stanford University<br/>
 
 <h3><p> <strong>Honors & Awards</strong></p></h3>
 
-Undergraduate Research Scholar Award
+Psychology Undergraduate Research Scholar Award
 <div style="float: right;">2014, 2015 </div>
 </br>
 
@@ -131,7 +131,7 @@ David H. Durra Scholarship
 <div style="float: right;">2016 </div>
 </br>
 
-Undergraduate Travel Award
+Psychology Undergraduate Travel Award
 <div style="float: right;">2016 </div>
 </br>
 
