--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   ga('create', 'UA-83024954-2', 'auto');
   ga('send', 'pageview');
-
 </script>
+
+<!-- <link rel="icon" type="image/png"
+     href="a link /> -->
     
     
     <title>Qihong Lu | UW-Madison</title>
