--- a/resources.html
+++ b/resources.html
@@ -79,6 +79,8 @@ Here're some resources for deep learning and reinforcement learning, primarily.
 <a href="http://www.cs.cmu.edu/~tom/10701_sp11/lectures.shtml">Intro to machine learning</a>, Tom Mitchell, Carnegie Mellon University
 <br>
 
+<a href="http://understandinghighercognition.com/">Understanding higher cognition</a>, Andrew Coward, Australian National University
+<br>
 
 
 
