--- a/academicCV.html
+++ b/academicCV.html
@@ -61,7 +61,7 @@
 
 
         
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/CV_QL.pdf">my CV </a> in PDF format </h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/mycv/CV_QL.pdf">my CV </a> in PDF format </h3>
 
 <h3><p> <strong>Education</strong></p> </h3>
 University of Wisconsin-Madison 
@@ -87,7 +87,7 @@ Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Ne
 PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 <br/>
 
-<strong>* </strong>Researcher @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
+<strong>* </strong>Research Assistant @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
 <div style="float: right;">2014~</div><br/>
 PI: Tim Rogers, UW-Madison <br/>
 <br/>
