--- a/research.html
+++ b/research.html
@@ -59,7 +59,8 @@
 <center>
 <p style="width: 500px;">
 <img src="/myImages/research/pdp_cat_demo.png"></p></center>
-<p> This is a computational model for the temporal dynamics of human object recognition. Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other behavioral and neural data.  <br>
+<p> The speed of ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we built a recurrent neural network that captures the behavioral and neural temporal dynamics of visual recognition processes, including the rapid recognition data and several other empirical patterns. These results provide evidence that object recognition is supported by interactive processes in the brain.
+<br>
 - [
 <a href = "myDocs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>, 
 <a href = "https://mindmodeling.org/cogsci2016/papers/0508/index.html"> CogSci 2016 Abstract</a>, 
@@ -89,7 +90,8 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 <p style="width: 450px;">
 <img src="/myImages/research/countModel_envir.png"></p></center>
 
-<p>Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps an artificial agent to learn a counting-related task. This modeling framework is inspired by the Deep-Q network (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>). 
+<p>
+Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps an artificial agent to learn a counting-related task. Our modeling framework is inspired by the Deep-Q network (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>). 
 
 Currently, I am trying to <a href = "https://github.com/QihongL/mathCognition_RAM"> augment this idea with hard attention</a> (<a href = "http://arxiv.org/abs/1406.6247">Mnih et al., 2014</a>).
 <br>
@@ -123,7 +125,8 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <p style="width: 450px;">
 <img src="/myImages/research/ilassoResults.png"></p></center>
 
-<p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional methods (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we were able to find distributed neural representation of faces that is idiosyncratic across subjects. 
+<p>
+We investigated the localization of the neural representations of faces, places, and objects in the brain, with a novel sparse multi-voxel pattern analysis (MVPA) method. Besides re-discover some previously identified ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found a bunch of "extra" brain regions that are distributed, signal-carrying  and idiosyncratic across subjects. 
 
 <br>
 - [
