--- a/research.html
+++ b/research.html
@@ -126,7 +126,7 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <img src="/myImages/research/ilassoResults.png"></p></center>
 
 <p>
-We investigated the localization of the neural representations of faces, places, and objects in the brain, with a novel sparse multi-voxel pattern analysis (MVPA) method. Besides re-discover some previously identified ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found a bunch of "extra" brain regions that are distributed, signal-carrying  and idiosyncratic across subjects. 
+We investigated the localization of the neural representations of faces, places, and objects in the brain, with a novel sparse multi-voxel pattern analysis (MVPA) method. Besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found a bunch of "extra" brain regions that are distributed, signal-carrying and idiosyncratic across subjects. 
 
 <br>
 - [
