--- a/academicCV.html
+++ b/academicCV.html
@@ -64,23 +64,23 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/mycv/CV_QL.pdf">my CV </a> in PDF format </h3>
 
 <h3><p> <strong>Education</strong></p> </h3>
-University of Wisconsin-Madison 
+B.S., University of Wisconsin-Madison 
 <div style="float: right;">2013 ~ May 2017 </div><br/>
-B.S. Mathematics, Psychology, minior in Computer Science <br/>
+Major in Mathematics and Psychology; Minior in Computer Science <br/>
 Comprehensive Honors <br/>
 
 <br><br>
 
 
 
-<h3><p> <strong>Research Experience</strong>  
+<h3><p> <strong>Selected Research Experience</strong>  
 </p>
 </h3>
 
-Research Intern	@ Laboratory of Neural Coding 
+<!-- Research Intern	@ Laboratory of Neural Coding 
 <div style="float: right;">Summer 2013 </div><br/>
 PI: Longnian Lin, <a href = "http://sbg.ecnu.edu.cn/">Shanghai Key Laboratory of Brain Functional Genomics</a><br/>
-<br/>
+<br/> -->
 
 Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a> 
 <div style="float: right;">2013~2015 </div><br/>
@@ -101,7 +101,7 @@ PI: Jay McClelland, Stanford University<br/>
 
 <br><br>
 
-<h3><p> <strong>Honors & Awards</strong></p></h3>
+<h3><p> <strong>Selected Honors & Awards</strong></p></h3>
 
 Psychology Undergraduate Research Scholar Award
 <div style="float: right;">2014, 2015 </div>
@@ -115,7 +115,7 @@ Margaret and Allard Smith Scholarship
 <div style="float: right;">2014 </div>
 </br>
 
-Inducted to Phi Beta Kappa as a junior
+Phi Beta Kappa as a junior
 <div style="float: right;">2015 </div>
 </br>
 
@@ -123,17 +123,35 @@ Hilldale Undergraduate Research Fellowship
 <div style="float: right;">2015 </div>
 </br>
 
-Bromley Research Conference Travel Grant
+<!-- Bromley Research Conference Travel Grant
 <div style="float: right;">2015 </div>
-</br>
+</br> -->
 
 David H. Durra Scholarship
 <div style="float: right;">2016 </div>
 </br>
 
-Psychology Undergraduate Travel Award
+<!-- Psychology Undergraduate Travel Award
 <div style="float: right;">2016 </div>
-</br>
+</br> -->
+
+
+<br><br>
+<h3><p> <strong>Manuscripts</strong></p></h3>
+<div style="padding-left: 4em; text-indent: -4em;">
+
+<p>
+Lu, Q., Cox, C., Rogers, T. T., Lambon Ralph, M., & Takahashi R. (in prep). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
+</p>
+<p>
+McClelland, J.L., Mickey, K., Hansen S., & Lu, Q. (in prep). A Parallel-Distributed Processing approach to mathematical cognition.
+</p>
+<p>
+Wang, T., Lu, Q. & Seidenberg, M.S. (in prep). The role of transitional probability in reading Chinese
+</p>
+
+</div>
+
 
 
       </section>
