--- a/research.html
+++ b/research.html
@@ -155,10 +155,10 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 <b>Other ongoing "brain decoding" projects: </b>
 
 <br>
-<a href = "https://github.com/QihongL/ECoG_animacyDecoding">Decode animacy</a> from human ECoG with Tim Rogers, Matt Lambon Ralph, Chris Cox. 
+<a href = "https://github.com/QihongL/ECoG_animacyDecoding">Decode animacy</a> from human ECoG - with Tim Rogers, Matt Lambon Ralph, Chris Cox. 
 
 <br>
-<a href = "https://github.com/QihongL/fMRI_motionDecoding">Decode 2D and 3D motion</a> from human fMRI with Bas Rokers, Tim Rogers, Andrew Haun. 
+<a href = "https://github.com/QihongL/fMRI_motionDecoding">Decode 2D/3D motion</a> from human fMRI - with Bas Rokers, Tim Rogers, Andrew Haun. 
 
  
 
