--- a/research.html
+++ b/research.html
@@ -117,7 +117,7 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 
 
 
-<h3><p> <strong>3. Discover distributed representation via fMRI decoding</strong></p></h3>
+<h3><p> <strong>3. Discover distributed representation with sparse MVPA methods</strong></p></h3>
 </i>
 </p>
 
@@ -126,7 +126,7 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <img src="/myImages/research/ilassoResults.png"></p></center>
 
 <p>
-We investigated the localization of the neural representations of faces, places, and objects in the brain, with a novel sparse multi-voxel pattern analysis (MVPA) method. Besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found a bunch of "extra" brain regions that are distributed, signal-carrying and idiosyncratic across subjects. 
+We investigated the localization of the neural representations of faces, places, and objects. We developed a novel sparse multi-voxel pattern analysis (MVPA) method, which identifies a subset of brain regions (voxels) that predict the kind of pictures (e.g. face vs. non-face) presented to the participants, given their fMRI data. Besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found a bunch of "extra" brain regions that are distributed, signal-carrying and idiosyncratic across subjects. 
 
 <br>
 - [
@@ -152,13 +152,12 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 </p>
 
 
-<b>Other ongoing "brain decoding" projects: </b>
+<b>Other ongoing MVPA projects: </b>
+<br>
+<a href = "https://github.com/QihongL/ECoG_animacyDecoding">Animacy </a> using human ECoG - with Chris Cox, Tim Rogers, Matt Lambon Ralph. 
 
 <br>
-<a href = "https://github.com/QihongL/ECoG_animacyDecoding">Decode animacy</a> from human ECoG - with Tim Rogers, Matt Lambon Ralph, Chris Cox. 
-
-<br>
-<a href = "https://github.com/QihongL/fMRI_motionDecoding">Decode 2D/3D motion</a> from human fMRI - with Bas Rokers, Tim Rogers, Andrew Haun. 
+<a href = "https://github.com/QihongL/fMRI_motionDecoding">2D/3D motion percept</a> using human fMRI - with Andrew Haun, Bas Rokers, Tim Rogers. 
 
  
 
