postpone tf project

--- a/tutorial.html
+++ b/tutorial.html
@@ -73,14 +73,14 @@ This is a tutorial I wrote when I was taking <a href = "http://www.laurentlessar
 
 
 
-<!-- <h3><p> <strong>2. <a href = "https://github.com/QihongL/neuralNet_tutorial_tensorflow">Intro to neural network modeling with Tensorflow</strong></a></p> </h3> -->
+<!-- <h3><p> <strong>2. <a href = "https://github.com/QihongL/neuralNet_tutorial_tensorflow">Intro to neural network modeling with Tensorflow</strong></a></p> </h3> 
 <h3><p> <strong>3. Intro to neural network modeling with Tensorflow</strong></p> </h3>
 <p>
-I am working on a tutorial for <a href = "http://concepts.psych.wisc.edu/index.php/classes/psychology-711/">Psych 711 Introduction to Parallel Distributed Processing </a>, a graduate course taught by Professor Tim Rogers at UW-Madison. This course provides a high level introduction to neural network modeling in the context of cognitive psychology research. 
+I am working on a tutorial for <a href = "http://concepts.psych.wisc.edu/index.php/classes/psychology-711/">Psych 711 Introduction to Parallel Distributed Processing </a>, a graduate course taught by Professor Tim Rogers at UW-Madison. This course provides a high level introduction to neural network modeling in the context of cognitive psychology. 
 </p>
 <br>
 
-
+-->
 
 
       </section>
