--- a/academicCV.html
+++ b/academicCV.html
@@ -147,7 +147,7 @@ Lu, Q., Cox, C., Rogers, T. T., Lambon Ralph, M., & Takahashi R. (in prep). An i
 McClelland, J.L., Mickey, K., Hansen S., & Lu, Q. (in prep). A Parallel-Distributed Processing approach to mathematical cognition.
 </p>
 <p>
-Wang, T., Lu, Q. & Seidenberg, M.S. (in prep). The role of transitional probability in reading Chinese
+Wang, T., Lu, Q. & Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese
 </p>
 
 </div>
