update link, re-org cv by time

--- a/academicCV.html
+++ b/academicCV.html
@@ -77,42 +77,30 @@ Comprehensive Honors <br/>
 </p>
 </h3>
 
-<!-- Research Intern	@ Laboratory of Neural Coding 
-<div style="float: right;">Summer 2013 </div><br/>
-PI: Longnian Lin, <a href = "http://sbg.ecnu.edu.cn/">Shanghai Key Laboratory of Brain Functional Genomics</a><br/>
-<br/> -->
+
+Research Assistant @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
+<div style="float: right;">2014~present</div><br/>
+PI: Tim Rogers, UW-Madison <br/>
+<br/>
+
+Visiting Researcher @ <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
+<div style="float: right;">Summer 2015 & 2016</div><br/>
+PI: Jay McClelland, Stanford University<br/>
+<br/>
 
 Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a> 
 <div style="float: right;">2013~2015 </div><br/>
 PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
-<br/>
 
-<strong>* </strong>Research Assistant @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
-<div style="float: right;">2014~</div><br/>
-PI: Tim Rogers, UW-Madison <br/>
-<br/>
 
-</strong>Visiting Researcher @ <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
-<div style="float: right;">Summer 2015 & 2016</div><br/>
-PI: Jay McClelland, Stanford University<br/>
-
-<div style="float: right;">(<strong>*</strong> = current)</div>
 
 
 <br><br>
 
 <h3><p> <strong>Selected Honors & Awards</strong></p></h3>
 
-Psychology Undergraduate Research Scholar Award
-<div style="float: right;">2014, 2015 </div>
-</br>
-
-Welton Summer Sophomore Research Apprenticeship Grant
-<div style="float: right;">2014 </div>
-</br>
-
-Margaret and Allard Smith Scholarship
-<div style="float: right;">2014 </div>
+David H. Durra Scholarship
+<div style="float: right;">2016 </div>
 </br>
 
 Phi Beta Kappa as a junior
@@ -123,17 +111,20 @@ Hilldale Undergraduate Research Fellowship
 <div style="float: right;">2015 </div>
 </br>
 
-<!-- Bromley Research Conference Travel Grant
-<div style="float: right;">2015 </div>
-</br> -->
-
-David H. Durra Scholarship
-<div style="float: right;">2016 </div>
+Psychology Undergraduate Research Scholar Award
+<div style="float: right;">2014, 2015 </div>
 </br>
 
-<!-- Psychology Undergraduate Travel Award
-<div style="float: right;">2016 </div>
-</br> -->
+Margaret and Allard Smith Scholarship
+<div style="float: right;">2014 </div>
+</br>
+
+Welton Summer Sophomore Research Apprenticeship Grant
+<div style="float: right;">2014 </div>
+</br>
+
+
+
 
 
 <br><br>
