--- a/resources.html
+++ b/resources.html
@@ -114,10 +114,7 @@ Here're some resources for deep learning and reinforcement learning, primarily.
 <h3><p> <strong>Other resources </strong></p> </h3>
 
 
-<a href="https://github.com/songrotek/Deep-Learning-Papers-Reading-Roadmap">Deep learning reading roadmap</a> 
-<br>
-
-<a href="http://deeplearning.net/reading-list/">Deep learning reading list</a> 
+Deep learning <a href="https://github.com/songrotek/Deep-Learning-Papers-Reading-Roadmap">reading list 1</a> , <a href="http://deeplearning.net/reading-list/">reading list 2</a> 
 <br>
 
 <a href="https://github.com/ChristosChristofidis/awesome-deep-learning">Deep learning repo</a> - books, courses, papers, data, etc.
@@ -134,6 +131,7 @@ Here're some resources for deep learning and reinforcement learning, primarily.
 
 
 Blogs: 
+<a href="https://nikokriegeskorte.org/">Niko Kriegeskorte</a>,
 <a href="http://colah.github.io/">Christopher Olah</a>,
 <a href="http://karpathy.github.io/">Andrej Karpathy</a>, 
 <a href="http://blog.shakirm.com/about-me/">Shakir Mohamed</a>
