--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ Outside the lab, I enjoy watching Japanese anime, tasting desserts and learning 
 <p>
 <b>News</b>:
 <br>
-10/26/2016 - I am organizing a <a href ="https://github.com/QihongL/MVPA_tutorial/wiki">workshop</a> about sparse MVPA methods for neuroimaging data. Let me know if you would like to join us. 
+03/12/2017 - This fall, I will start my Ph.D. in psychology and neuroscience at Princeton. Many thanks to people who helped me throughout the application process!
 <br>
-8/31/2016 -  I plan to apply for interdisciplinary Ph.D. programs in psychology and neuroscience this fall.
+10/26/2016 - I am organizing a <a href ="https://github.com/QihongL/MVPA_tutorial/wiki">workshop</a> about sparse MVPA methods for neuroimaging data. Let me know if you would like to join us. 
 </p>
 
       </section>
