--- a/resources.html
+++ b/resources.html
@@ -151,10 +151,9 @@ Blogs:
 <a href="https://gym.openai.com/">OpenAI Gym</a>: simulated environment for training RL agents
 <br>
 <a href = "http://web.stanford.edu/group/mbc/LENSManual/">LENS</a>: the light, efficient network simulator.
-
 <br>
-
-
+<a href = "https://grey.colorado.edu/emergent/index.php/Main_Page">emergent</a>: a comprehensive neural network simulator.
+<br>
 
 
       </section>
