--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link href="//www.princeton.edu/main/favicon.ico" rel="shortcut icon">
+<!--     <link href="//www.princeton.edu/main/favicon.ico" rel="shortcut icon"> -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
