--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <!--     <link href="//www.princeton.edu/main/favicon.ico" rel="shortcut icon"> -->
 
+<link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" />
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
