--- a/tutorial.html
+++ b/tutorial.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+<link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" />
     
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
