--- a/resources.html
+++ b/resources.html
@@ -134,6 +134,7 @@ Deep learning <a href="https://github.com/songrotek/Deep-Learning-Papers-Reading
 
 Blogs: 
 <a href="https://nikokriegeskorte.org/">Niko Kriegeskorte</a>,
+<a href="http://distill.pub/">Distill</a>,
 <a href="http://colah.github.io/">Christopher Olah</a>,
 <a href="http://karpathy.github.io/">Andrej Karpathy</a>, 
 <a href="http://blog.shakirm.com/about-me/">Shakir Mohamed</a>
