--- a/resources.html
+++ b/resources.html
@@ -40,7 +40,7 @@
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qihong.lu@wisc.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="mailto:qihong.lu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
         
         <p class="view">
@@ -82,7 +82,7 @@ Here're some resources for deep learning and reinforcement learning, primarily.
 <a href="http://info.usherbrooke.ca/hlarochelle/cours/ift725_A2013/contenu.html">Intro to neural network</a>, Hugo Larochelle, Université de Sherbrooke
 <br>
 
-<a href="http://www.cs.cmu.edu/~tom/10701_sp11/lectures.shtml">Intro to machine learning</a>, Tom Mitchell, Carnegie Mellon University
+<a href="http://www.cs.cmu.edu/~ninamf/courses/601sp15/lectures.shtml">Intro to machine learning</a>, Tom Mitchell, Carnegie Mellon University
 <br>
 
 <a href="http://understandinghighercognition.com/">Understanding higher cognition</a>, Andrew Coward, Australian National University
