use a more recent pic

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal webpage!
 </h3>
 
-<center><p style="width: 415px;">
-<img src="/myImages/myPics/engAward.jpg">
+<center><p style="width: 500px;">
+<img src="/myImages/myPics/me_slc.png">
 </p></center>
 
 <p>
