--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 </script>
 
-<!--     <link href="//www.princeton.edu/main/favicon.ico" rel="shortcut icon"> -->
-<link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" />
+<link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+<!-- <link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" /> -->
     
     <title>Qihong Lu | UW-Madison</title>
 
@@ -66,15 +66,13 @@
 </p></center>
 
 <p>
-Hi, I'm Qihong Lu, or just "Q", an undergrad studying psychology and math at the <a href="http://www.wisc.edu/">UW-Madison</a>. This fall, I will start my Ph.D. in psychology and neuroscience at <a href="http://www.princeton.edu/main/">Princeton</a>. Many thanks to people who have been helping me along the way! 
+Hi, I'm Qihong Lu, or "Q". I will start my PhD in psychology at Princeton this fall. Many thanks to people who have been helping me along the way! 
 </p>
 
 <p>
 <b>News</b>:
 <br>
-03/23/2017 - I will move to Princeton this fall and my new email address is qihong.lu[at]princeton.edu
-<br>
-10/26/2016 - I am organizing a <a href ="https://github.com/QihongL/MVPA_tutorial/wiki">workshop</a> about sparse MVPA methods for neuroimaging data. Let me know if you would like to join us. 
+03/23/2017 - I will move to Princeton in early July. My email address has changed to qihong.lu[at]princeton.edu
 </p>
 
       </section>
