--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 <!-- <link rel="shortcut icon" href="https://www.cs.wisc.edu/sites/all/themes/cs_subtheme/favicon.ico" type="image/vnd.microsoft.icon" /> -->
     
-    <title>Qihong Lu | UW-Madison</title>
+    <title>Qihong Lu | Princeton University</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
