use the shorter email address

--- a/academicCV.html
+++ b/academicCV.html
@@ -43,7 +43,7 @@
 
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qihong.lu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="mailto:qlu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
         
         <p class="view">
