--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qihong.lu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+        <a href="mailto:qlu@princeton.edu" target="_top"><img src="myImages/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
         </p>
         
         <p class="view">
@@ -72,7 +72,7 @@ Hi, I'm Qihong Lu, or "Q". I will start my PhD in psychology at Princeton this f
 <p>
 <b>News</b>:
 <br>
-03/23/2017 - I will move to Princeton in early July. My email address has changed to qihong.lu[at]princeton.edu
+03/23/2017 - I will move to Princeton in early July. My email address has changed to qlu[at]princeton.edu
 </p>
 
       </section>
