--- a/academicCV.html
+++ b/academicCV.html
@@ -65,37 +65,33 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/mycv/CV_QL.pdf">my CV </a> in PDF format </h3>
 
 <h3><p> <strong>Education</strong></p> </h3>
-<!-- 
-Ph.D. in Psychology and Neuroscience, Princeton University
+
+Ph.D. in Psychology, Princeton University
 <div style="float: right;">2017 ~ </div><br/>
-Advisor: Ken Norman
-<br><br>
--->
+<br>
 
 B.S. in Mathematics and Psychology, UW-Madison 
 <div style="float: right;">2013 ~ May 2017 </div><br/>
-Comprehensive Honors, Certificate in Computer Science <br/>
-Advisor: Tim Rogers <br/>
 <br><br>
 
 
 
-<h3><p> <strong>Selected Research Experience</strong>  
+<h3><p> <strong>Undergrad Research Experience</strong>  
 </p>
 </h3>
 
 
-Research Assistant @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
+<a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
 <div style="float: right;">2014~2017</div><br/>
 PI: Tim Rogers, UW-Madison <br/>
 <br/>
 
-Visiting Researcher @ <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
+<a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
 <div style="float: right;">Summer 2015 & 2016</div><br/>
 PI: Jay McClelland, Stanford University<br/>
 <br/>
 
-Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a> 
+<a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a> 
 <div style="float: right;">2013~2015 </div><br/>
 PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 
@@ -104,7 +100,7 @@ PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 
 <br><br>
 
-<h3><p> <strong>Selected Honors & Awards</strong></p></h3>
+<h3><p> <strong>Some Honors & Awards</strong></p></h3>
 
 College of Letters & Science Dean’s Prize
 <div style="float: right;">2017 </div>
