--- a/index.html
+++ b/index.html
@@ -66,13 +66,19 @@
 </p></center>
 
 <p>
-Hi, I'm Qihong Lu, or "Q". I will start my PhD in psychology at Princeton this fall. Many thanks to people who have been helping me along the way! 
+Hi, I'm Qihong Lu, or "Q". I'm a 1st year PhD student at the <a href = "http://compmem.princeton.edu/">Princeton Computational Memory Lab</a>.  
+<!-- 
+I would like to understand how might complex cognitive functions, such as memory, emerge across neuron-like processing units.
+ -->
 </p>
+
+
+
 
 <p>
 <b>News</b>:
 <br>
-03/23/2017 - I will move to Princeton in early July. My email address has changed to qlu[at]princeton.edu
+03/23/2017 - My email address has changed to qlu[at]princeton.edu
 </p>
 
       </section>
