--- a/academicCV.html
+++ b/academicCV.html
@@ -34,11 +34,11 @@
         
         <br>                
         <p class="view"> <a href="index.html">Home</a></p>
-        <p class="view"><a href="research.html">Research Projects</a></p>        
-        <p class="view"> Academic CV</p>
-        <p class="view"> <a href="tutorial.html">Tutorials</a></p>
+        <p class="view"><a href="research.html">Research</a></p>        
+        <p class="view"> CV</p>
+<!--         <p class="view"> <a href="tutorial.html">Tutorials</a></p> -->
         <p class="view"> <a href="resources.html">Resources</a></p>
-
+        <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
 
         <p class="view">
@@ -47,13 +47,8 @@
         </p>
         
         <p class="view">
-        <a href="https://www.linkedin.com/in/qihong"> <img src="myImages/logo/linkedin.png" alt="myLinkedin" style="width:40px;height:40px;"></a>
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
-        </p>
-
-        <p class="view">
-        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:42px;height:42px;"></a>
-<!--         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>         -->
+        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
 
       </header>
