--- a/research.html
+++ b/research.html
@@ -54,6 +54,8 @@
       <section>
         <h3>
 
+FYI: This page is quite outdated...
+
 <h3 id="top"><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
 <center>
 <p style="width: 500px;">
