--- a/academicCV.html
+++ b/academicCV.html
@@ -125,16 +125,21 @@ Welton Summer Sophomore Research Apprenticeship Grant
 
 
 
-<!-- <br><br>
+<br><br>
 <h3><p> <strong>Manuscripts</strong></p></h3>
 <div style="padding-left: 4em; text-indent: -4em;">
 
 <p>
 Lu, Q., Cox, C., Rogers, T. T., Lambon Ralph, M., & Takahashi R. (in prep). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
 </p>
+
+<p>
+McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). A Parallel-Distributed Processing Approach to Mathematical Cognition. [<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>]
+</p>
+
 <p>
 Wang, T., Lu, Q. & Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese
-</p> -->
+</p> 
 
 </div>
 
