--- a/academicCV.html
+++ b/academicCV.html
@@ -57,7 +57,11 @@
 
 
         
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/mycv/CV_QL.pdf">my CV </a> in PDF format </h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 
+
+
+Here's my <a href="myDocs/mycv/CV_QL.pdf">full CV (PDF)</a> 
+</h3>
 
 <h3><p> <strong>Education</strong></p> </h3>
 
@@ -71,27 +75,37 @@ B.S. in Mathematics and Psychology, UW-Madison
 
 
 
-<h3><p> <strong>Undergrad Research Experience</strong>  
+<h3><p> <strong>Research Experience</strong>  
 </p>
 </h3>
+
+<a href ="http://compmem.princeton.edu/">Princeton Computational Memory Lab</a>
+<div style="float: right;">2017~</div><br/>
+PI: Ken Norman, Princeton University
+<br><br>
+
+<a href ="https://www.hassonlab.com/">Hasson Lab</a>
+<div style="float: right;">2017~</div><br/>
+PI: Uri Hasson, Princeton University
+<br><br>
 
 
 <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
 <div style="float: right;">2014~2017</div><br/>
 PI: Tim Rogers, UW-Madison <br/>
-<br/>
+<br>
 
 <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
 <div style="float: right;">Summer 2015 & 2016</div><br/>
 PI: Jay McClelland, Stanford University<br/>
-<br/>
+<br>
 
 <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a> 
 <div style="float: right;">2013~2015 </div><br/>
 PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 
 
-
+<!-- 
 
 <br><br>
 
@@ -119,7 +133,7 @@ Psychology Undergraduate Research Scholar Award
 
 Welton Summer Sophomore Research Apprenticeship Grant
 <div style="float: right;">2014 </div>
-</br>
+</br> -->
 
 
 
