--- a/resources.html
+++ b/resources.html
@@ -84,9 +84,13 @@ Deep reinforcement learning:
 - <a href="http://www0.cs.ucl.ac.uk/staff/D.Silver/web/Teaching.html">Reinforcement Learning</a>, 
 David Silver, University College London
 <br>
-
 - <a href="http://rll.berkeley.edu/deeprlcourse/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=revue">Deep Reinforcement Learning</a>, 
 Sergey Levine, UC Berkeley
+<br>
+- <a href="https://www.deepbootcamp.io/">Deep RL Bootcamp</a>, 
+[<a href="https://sites.google.com/view/deep-rl-bootcamp/lectures">lectures</a>,
+<a href="https://sites.google.com/view/deep-rl-bootcamp/labs">labs</a>],
+UC Berkeley
 <br>
 
 Fundations: 
@@ -112,7 +116,9 @@ Ryan Tibshirani, Larry Wasserman, CMU
 <a href = "https://grey.colorado.edu/CompCogNeuro/index.php/CCNBook/Main">Computational cognitive neuroscience</a>, Randall O'Reilly
 <br>
 
-<a href="http://www.deeplearningbook.org/">Deep learning</a>, Ian Goodfellow, Yoshua Bengio and Aaron Courville
+<a href="http://www.deeplearningbook.org/">Deep learning</a>, 
+[<a href="https://www.youtube.com/channel/UCF9O8Vj-FEbRDA5DcDGz-Pg/videos">videos</a>], 
+Ian Goodfellow, Yoshua Bengio and Aaron Courville
 <br>
 
 <a href="http://ufal.mff.cuni.cz/~straka/courses/npfl114/2016/sutton-bookdraft2016sep.pdf">Intro to reinforcement learning</a>, Richard Sutton and Andrew Barto
