--- a/resources.html
+++ b/resources.html
@@ -69,6 +69,10 @@ Once you get more serious about machine learning, you might need some basic math
 
 Deep learning:
 <br>
+- <a href="https://stats385.github.io/">Theories of Deep Learning</a>
+[<a href="https://www.researchgate.net/project/Theories-of-Deep-Learning">lectures</a>],  
+Hatef Monajemi, et al., Stanford University 
+<br>
 - <a href="http://cs231n.stanford.edu/">ConvNet for visual recognition</a>, 
 Fei-Fei Li, et al., Stanford University 
 <br>
