--- a/resources.html
+++ b/resources.html
@@ -105,6 +105,9 @@ Tom Mitchell, CMU
 - <a href="http://www.stat.cmu.edu/~ryantibs/statml/">Statistical Machine Learning</a>, 
 Ryan Tibshirani, Larry Wasserman, CMU
 <br>
+- <a href="http://hunch.net/~mltf/">Machine Learning the Future</a>, 
+Cornell Tech and Cornell
+<br>
 
 
 
