--- a/resources.html
+++ b/resources.html
@@ -102,6 +102,10 @@ Fundations:
 - <a href="http://www.cs.cmu.edu/~ninamf/courses/601sp15/lectures.shtml">Intro to Machine Learning</a>, 
 Tom Mitchell, CMU
 <br>
+- <a href="http://www.mit.edu/~9.520/fall17/">Statistical Learning Theory and Applications</a> 
+[<a href="https://www.youtube.com/watch?v=Q5itLKscYTA&list=PLyGKBDfnk-iCXhuP9W-BQ9q2RkEIA5I5f">lectures</a>], 
+Tomaso Poggio, et al., MIT
+<br>
 - <a href="http://www.stat.cmu.edu/~ryantibs/statml/">Statistical Machine Learning</a>, 
 Ryan Tibshirani, Larry Wasserman, CMU
 <br>
@@ -155,7 +159,8 @@ Readings:
 
 <br>
 - Other stuff: 
-<a href="https://sccn.ucsd.edu/wiki/EEGLAB#The_EEGLAB_Tutorial_Outline">The EEGLAB Tutorial </a>
+<a href="https://sccn.ucsd.edu/wiki/EEGLAB#The_EEGLAB_Tutorial_Outline">The EEGLAB Tutorial</a>, 
+<a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>
 
 <br>
 - Blogs: 
